# serde

./: CMakeLists.txt
include/serde/: common.hpp  deserializer.hpp  serializer.hpp  tests.hpp
test/: object_super.cpp  object_super_iterable.cpp  object_super_iterable_empty.cpp
tests/: object_super.cpp  tests.cpp
